--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,7 @@ dependencies:
   chewie: ^1.8.5
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.19.0
+  flutter_localization: ^0.2.2
   photo_manager: ^3.3.0
   photo_view: ^0.15.0
   video_player: ^2.9.1
